			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01ax: *********************************

************************* Version 8.01aw: *********************************

IMP: (12/17/04, RK) NCC: remove useless options. update documentation

IMP: (12/17/04, GVG) 3D View: panning implemented (Bug #24). ZoomAndPanListener.panX and panY replaced by one function
and new one was added to WindowContent to deal with different window types.

IMP: (12/17/04, SMR) Cleaned up code (removed irrelevant commented-out sections),
     converted wildcard imports.

BUG: (12/17/04, SMR) Edit in-place does not grow as new text is typed (Bug #125).
FIX: In GetInfoText.EditInPlaceListener, fill in keyReleased() and have it resize the text area.

IMP: (12/17/04, DN) Fixed compilation warnings on Java-1.5.

BUG: (12/17/04, GVG) 3D view: problems with zoom in/zoom out (Bug #23)
FIX: Change factor calculation and now we are just setting a new transformation scale.

IMP: (12/17/04, DN) Fixed compilation warnings on Java-1.5.

IMP: (12/16/04, GVG) Minor changes due to manul preparation.

BUG: (12/16/04, SMR) Going "Down Hierarchy" after a "Down Hierarchy In Place" remains
     in "in place" mode (Bug #107).
FIX: In EditWindow.downHierarchy(), turn off "in place" mode if not going down in place.

IMP: (12/16/04, GVG) New transistor sizes of OD18 and Native to comply with missing DRC rules

BUG: (12/16/04, SMR) PostScript export of waveform windows crashes (Bug #119).
FIX: In PostScript.java, check for null EditWindow pointer.

IMP: (12/15/04, SMR) Minor changes to GUI to help with documentation: About dialog, New Arc Preferences,
     outline edit, verilog of and/or gates, multipage schematics, command-line help, Export menu,
     pulldown reporting.

BUG: (12/15/04, SMR) "Antenna" preferences crash if current technology has no metal.
FIX: Check for empty list.
