@@ -360,7 +360,8 @@ public class Change extends EDialog implements HighlightListener
 			if (showPrimitives.isSelected())
 			{
 				// primitive: list primitives in this and the generic technology
-				for(Iterator it = curTech.getNodes(); it.hasNext(); )
+				List list = curTech.getNodesSortedByName();
+				for(Iterator it = list.iterator(); it.hasNext(); )
 				{
 					PrimitiveNode np = (PrimitiveNode)it.next();
 					changeListModel.addElement(np.describe());
