@@ -720,7 +720,8 @@ public class TechPalette extends JPanel implements MouseListener, MouseMotionLis
             } else if (msg.equals("Pure"))
             {
                 JPopupMenu pureMenu = new JPopupMenu("Pure");
-                for(Iterator it = Technology.getCurrent().getNodes(); it.hasNext(); )
+	            List list = Technology.getCurrent().getNodesSortedByName();
+                for(Iterator it = list.iterator(); it.hasNext(); )
                 {
                     PrimitiveNode np = (PrimitiveNode)it.next();
                     if (np.isNotUsed()) continue;
