@@ -4,9 +4,12 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.01ax: *********************************
 
-************************* Version 8.01aw: *********************************
+IMP: (12/20/04, GVG) List of primitive nodes in Change dialog and tech palette are sorted alphabetically (Bug #132)
+In case of sorted list of nodes, use Technology.Technology.getCurrent()
 
 IMP: (12/17/04, RK) NCC: remove useless options. update documentation
+
+************************* Version 8.01aw: *********************************
 
 IMP: (12/17/04, GVG) 3D View: panning implemented (Bug #24). ZoomAndPanListener.panX and panY replaced by one function
 and new one was added to WindowContent to deal with different window types.
